Fix 404 and possibly fix mobile stretching?

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -308,15 +308,6 @@ body.lb-disable-scrolling {
   transform: scale(1.05);
 }
 
-@media screen and (min-width: 768px) {
-  .columns.is-multiline {
-    flex-wrap: nowrap;
-  }
-
-  .columns.is-4 {
-    flex: none;
-  }
-}
 
 #gallery .columns.is-multiline {
   display: flex;
